# vibe-training-sample-creator

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: sampler.agent.md
.github/prompts/: initialize.prompt.md  update.prompt.md
samples/password-generator/: MESSAGE-STRUCTURE-REFERENCE.md
samples/password-generator/level-1-basic/: README.md
samples/password-generator/level-1-basic/.github/: copilot-instructions.md
samples/password-generator/level-1-basic/nanoagent/: .env.template  README.md  agent.py  pyproject.toml
samples/password-generator/level-1-basic/prompts/: password-generator-better.prompt.md  password-generator-simple.prompt.md
samples/password-generator/level-2-intermediate/: README.md  copilot-instructions.md
samples/password-generator/level-2-intermediate/.github/: README.md  copilot-instructions.md
samples/password-generator/level-2-intermediate/nanoagent/: README.md  agent.py  pyproject.toml
samples/password-generator/level-2-intermediate/nanoagent/instructions/: system.md
samples/password-generator/level-2-intermediate/nanoagent/tools/: __init__.py  password_tools.py
samples/password-generator/level-3-advanced/: README.md  copilot-instructions.md
samples/password-generator/level-3-advanced/nanoagent/: .env.template  README.md  orchestrator.py  pyproject.toml
samples/password-generator/level-3-advanced/nanoagent/agents/: __init__.py  base.py  implementer.py  planner.py  tester.py
samples/password-generator/level-3-advanced/nanoagent/tools/: __init__.py  shared_tools.py
(+37 files in other folders)
